# tentacle

./: AGENTS.md  MANIFEST.in  README.md  bar.txt  baz.txt  foo.txt  pyproject.toml  qux.txt  test_text_containment.py
.github/workflows/: publish.yml  test.yml
octotui/: __init__.py  animated_logo.py  diff_markdown.py  gac_config_modal.py  gac_integration.py  gac_provider_registry.py  git_diff_viewer.py  git_status_sidebar.py  main.py  style.tcss
tentacle/: __init__.py  animated_logo.py  commit_graph.py  gac_config_modal.py  gac_integration.py  git_diff_viewer.py
