[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tentacle"
version = "0.1.0"
description = "TUI replacement for GitKraken!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "textual>=6.1.0",
    "GitPython>=3.1.42",
    "gac>0.18.0",
    "pyfiglet>=1.0.2",
]

[project.scripts]
tentacle = "tentacle.main:main"

[tool.hatch.build.targets.wheel]
packages = ["tentacle"]

[tool.hatch.build.targets.wheel.include]
files = ["tentacle/style.tcss"]
